--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index --ext gql,js"
+    "start": "nodemon --exec babel-node src/index --ext graphql,js",
+    "get-schema": "graphql get-schema -p hotel"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "babel-plugin-import-graphql": "^2.8.1",
     "bcrypt": "^5.0.1",
-    "graphql": "^16.2.0"
+    "express": "^4.17.2",
+    "graphql": "^14.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "prisma-binding": "^2.3.15",
+    "slugify": "^1.6.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
